# yichen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  QQ_WeChat_Login_Guide.md  SHARE_README.md  dev.ps1  docker-compose.lite.yml  docker-compose.yml  readme.md  start.bat  start.sh  stop.bat  stop.sh  test_db_unified.py  启动.md
.local-mysql/: my-3307.cnf
RagBackend/: .dockerignore  .env.example  .gitignore  Dockerfile  Readme.md  main.py  models_config.json  pyproject.toml  requirements.txt  trace_logging.py
RagBackend/ASF_SRE/: SRE_mian.py
RagBackend/RAGF_User_Management/: LogonAndLogin.py  QQ_Login.py  Reset_Password.py  User_Management.py  User_settings.py  db_config.py
RagBackend/RAG_M/: Pipfile  RAG_app.py  README.md  requirements.txt
RagBackend/agent_tools/: agent_advanced.py  enterprise_tools.py  web_search_tool.py
RagBackend/audit/: __init__.py  audit_log.py
RagBackend/billing/: billing_manager.py
RagBackend/creation/: __init__.py  doc_creation.py
RagBackend/data_sources/: __init__.py  datasource_manager.py
RagBackend/docs/: ASF_RAG_Documentation.md  environment_setup_and_architecture.md  init.sql
RagBackend/document_processing/: API.md  doc_list.py  doc_manage.py  doc_upload.py  incremental_vectorizer.py  pipeline.py  retrieval_strategy.py  semantic_splitter.py  task_queue.py  vectorize_task.py
RagBackend/enterprise/: compliance_manager.py  kb_backup.py
RagBackend/evaluation/: eval_panel.py
RagBackend/feedback/: feedback_router.py
RagBackend/integrations/: dingtalk_wecom.py  feishu_bot.py  obsidian_sync.py
RagBackend/knowledge/: doc_comment_manager.py  doc_tag_manager.py  doc_version_manager.py  ocr_parser.py  rbac_manager.py
RagBackend/knowledge_base/: knowledgeBASE4CURD.py  knowledgebase_cover.py
RagBackend/knowledge_graph/: generate_kg.py  testGPH.py
kb_smart_rag_v1/: .gitignore  README.md  kb_smart_rag_v1-本地部署文档.doc  main.py  pyproject.toml  常见疾病诊疗基础文档_graph.json
(+261 files in other folders)
