[project]
name = "asf-rag-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==24.1.0",
    "beautifulsoup4==4.13.4",
    "camelot-py==0.11.0",
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "fastapi==0.116.1",
    "google-api-python-client==2.109.0",
    "jinja2==3.1.6",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-huggingface==0.3.1",
    "langchain-ollama==0.3.6",
    "layoutparser==0.3.4",
    "pdf2image==1.17.0",
    "pdfplumber==0.11.7",
    "pillow==11.3.0",
    "protobuf==6.31.1",
    "pydantic==2.11.7",
    "pyjwt==2.10.1",
    "pymysql==1.1.1",
    "pypdf2==3.0.1",
    "pytesseract==0.3.13",
    "python-docx==1.1.2",
    "python-dotenv==1.1.1",
    "python-multipart>=0.0.6",
    "requests==2.32.4",
    "sentence-transformers>=5.1.0",
    "uvicorn==0.35.0",
]
